--- a/BreakReminder.qrc
+++ b/BreakReminder.qrc
@@ -5,5 +5,7 @@
         <file alias="later2">images/Button-Cancel-icon-64.png</file>
         <file alias="restart">images/Button-Reload-icon-64.png</file>
         <file alias="tray">images/Clock-icon-64.png</file>
+        <file alias="later3">images/Button-Forward-icon.png</file>
+        <file alias="sooner">images/Button-Rewind-icon.png</file>
     </qresource>
 </RCC>
